--- a/AlarmMultiUser/AlarmMultiUser/es.lproj/Main.strings
+++ b/AlarmMultiUser/AlarmMultiUser/es.lproj/Main.strings
@@ -3,7 +3,7 @@
 "0W6-MR-weI.text" = "Muestra el día del mes";
 
 /* Class = "IBUINavigationItem"; title = "Add new alarm"; ObjectID = "0lS-8m-Am4"; */
-"0lS-8m-Am4.title" = "Add new alarm";
+"0lS-8m-Am4.title" = "Añadir nueva alarma";
 
 /* Class = "IBUILabel"; text = "0"; ObjectID = "9I5-2P-fDJ"; */
 "9I5-2P-fDJ.text" = "0";
